--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="col-span-2 flex justify-center items-center gap-5 bg-gradient-to-r from-blue-800 to-blue-500 p-5 rounded-md">
                         <img src="./assets/board.png" alt="">
                         <div>
-                            <h1 class="text-white text-2xl">Discover Something New Today!</h1>
+                            <h1 id="blog-button" class="text-white text-2xl text-left cursor-pointer">Discover Something New Today!</h1>
                         </div>
                     </div>
                     <div class="flex justify-center items-center gap-5 bg-slate-300 p-5 rounded-md">
@@ -159,10 +159,10 @@
                     <img src="./assets/activity.png" alt="">
                     <h1>Activity Log</h1>
                 </div>
-                <button class="btn bg-blue-500 text-white hover:bg-blue-400">Clear History</button>
+                <button id="clear-history" class="btn bg-blue-500 text-white hover:bg-blue-400">Clear History</button>
                 <hr class="my-5">
                 <div id="added-task">
-                    
+
                 </div>
             </div>
         </section>
