--- a/blog.html
+++ b/blog.html
@@ -33,9 +33,7 @@
         <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
       </div>
       <div class="flex items-center gap-x-10">
-        <button class="btn rounded-full"><span><img class="w-6" src="./assets/checkbox.png" alt=""></span><span
-            id="increment-task">0</span></button>
-        <button id="change-bg-color"><img src="./assets/theme-btn.png" alt=""></button>
+        <button id="back-desk" class="btn btn-primary">Back To Desk</button>
       </div>
     </header>
   </section>
@@ -68,6 +66,8 @@
 
   </section>
   <!------------------- header section end------------------->
+
+  <script src="blog.js"></script>
 </body>
 
 </html>
