--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <div class="flex justify-center items-center gap-5 bg-slate-300 p-5 rounded-md">
                         <button class="bg-white p-3 rounded-full"><img class="w-6 h-6" src="./assets/calender.png" alt=""></button>
                         <div>
-                            <h1>Wed ,</h1>
-                            <p class="text-2xl font-bold">Jul 28 2025</p>
+                            <p class="" id="date"></p>
+                            <h1 class="text-2xl font-bold" id="month-year"></h1>
                         </div>
                     </div>
                 </section>
