added-time-task

--- a/blog.html
+++ b/blog.html
@@ -41,12 +41,12 @@
     <div class="collapse bg-base-100 border border-base-300">
       <input type="radio" name="my-accordion-1" checked="checked" />
       <div class="collapse-title font-semibold">What are the different ways to select an element in the DOM?</div>
-      <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+      <div class="collapse-content text-md">ডম এলিমেন্ট সিলেক্ট করার অনেকগুলা পদ্বতি আছে তার মধ্যে হচ্ছে getElementsByTagName() getElementById() getElementsByClassName() querySelector() querySelectorAll()</div>
     </div>
     <div class="collapse bg-base-100 border border-base-300 mt-5">
       <input type="radio" name="my-accordion-1" checked="checked" />
       <div class="collapse-title font-semibold">What is the difference between innerHTML, innerText, and textContent ?</div>
-      <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+      <div class="collapse-content text-md">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
     </div>
     <div class="collapse bg-base-100 border border-base-300 mt-5">
       <input type="radio" name="my-accordion-1" checked="checked" />
