--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="flex items-center gap-x-10">
                 <button class="btn rounded-full"><span><img class="w-6" src="./assets/checkbox.png" alt=""></span><span id="increment-task">0</span></button>
-                <button id="change-bg-color"><img src="./assets/theme-btn.png" alt=""></button>
+                <button id="change-bg-color"><img id="rotate-img" src="./assets/theme-btn.png" alt=""></button>
             </div>
         </header>
     </section>
