--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
     <div class="collapse bg-base-100 border border-base-300 mt-5">
       <input type="radio" name="my-accordion-1" checked="checked" />
       <div class="collapse-title font-semibold">What is the difference between innerHTML, innerText, and textContent ?</div>
-      <div class="collapse-content text-md">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+      <div class="collapse-content text-md">innerHTML দিয়ে একটা ডিভ এর ভিতর যতগুলা এলিমেন্ট আছে সব গুলার html tag সহ পাওয়া যায় , innerText দিয়ে শুধু মাত্র ভিতরের টেক্সট পাওয়া যায় । আর textContent দিয়ে একটা ডিভের ভিতর যতগুলা টেক্সট আছে সব দেয় শুধু html ট্যাগ আর কোনো স্টাইল সম্পর্কিত কোড ছাড়া </div>
     </div>
     <div class="collapse bg-base-100 border border-base-300 mt-5">
       <input type="radio" name="my-accordion-1" checked="checked" />
