--- a/blog.html
+++ b/blog.html
@@ -51,17 +51,17 @@
     <div class="collapse bg-base-100 border border-base-300 mt-5">
       <input type="radio" name="my-accordion-1" checked="checked" />
       <div class="collapse-title font-semibold">What is event delegation in the DOM?</div>
-      <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+      <div class="collapse-content text-md">Event Delegation হলো একধরনের ইভেন্ট হ্যান্ডলিং, যেখানে কোনো চাইল্ড এলিমেন্টের বদলে তার প্যারেন্ট এলিমেন্টে ইভেন্ট লিসেনার সেট করা হয়। এতে করে ডাইনামিকভাবে নতুন এলিমেন্ট যোগ হলেও ইভেন্ট ঠিকভাবে কাজ করে।</div>
     </div>
     <div class="collapse bg-base-100 border border-base-300 mt-5">
       <input type="radio" name="my-accordion-1" checked="checked" />
       <div class="collapse-title font-semibold">What is event bubbling in the DOM?</div>
-      <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+      <div class="collapse-content text-sm">Event Bubbling হলো একটি ইভেন্ট প্রোপাগেশন মেকানিজম, যেখানে একটি ইভেন্ট প্রথমে যেই এলিমেন্ট এ ক্লিক করা হয় তা ঘটে এবং তারপর তা ধাপে ধাপে তার প্যারেন্ট ও উপরের এলিমেন্টগুলোতে ছড়িয়ে যায়।</div>
     </div>
     <div class="collapse bg-base-100 border border-base-300 mt-5">
       <input type="radio" name="my-accordion-1" checked="checked" />
       <div class="collapse-title font-semibold"> How do you create, add, and remove elements using JavaScript?</div>
-      <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+      <div class="collapse-content text-sm">যদি আমরা কোনো এলিমেন্ট ক্রিয়েট করতে যাই তাহলে আমাদের লিখতে হবে document.createElement('এইখানে যেই এলিমেন্ট ক্রিয়েট করতে চাই অইটার ট্যাগ দিতে হবে') । আর যদি কোনো কিছু এড করতে চাই তাহলে আমরা appendChild()দিয়েও করতে পারি । আর যদি কোনো কিছু রিমুভ করতে চাই তাহলে remove(), removeChild() এই মেথড গুলা ইউস করতে পারি</div>
     </div>
 
   </section>
