--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="flex justify-between gap-5">
             <div class="w-[80%] bg-white rounded-md p-5">
                 <section class="grid grid-cols-4 gap-5">
-                    <div class="flex justify-center items-center gap-5 bg-slate-300 p-8 rounded-md">
+                    <div class="flex justify-center items-center gap-5 bg-blue-50 p-8 rounded-md">
                         <button class="bg-white p-3 rounded-full"><img class="w-6 h-6" src="./assets/checkbox.png" alt=""></button>
                         <div>
                             <h1>Task Assigned</h1>
@@ -54,7 +54,7 @@
                             <h1 id="blog-button" class="text-white text-2xl text-left cursor-pointer">Discover Something New Today!</h1>
                         </div>
                     </div>
-                    <div class="flex justify-center items-center gap-5 bg-slate-300 p-5 rounded-md">
+                    <div class="flex justify-center items-center gap-5 bg-blue-50 p-5 rounded-md">
                         <button class="bg-white p-3 rounded-full"><img class="w-6 h-6" src="./assets/calender.png" alt=""></button>
                         <div>
                             <p class="" id="date"></p>
@@ -86,7 +86,7 @@
                         <div class="flex justify-between items-center border-t border-black mt-5 pt-5">
                             <div class="">
                                 <h1>Deadline</h1>
-                                <p>21 March 2025</p>
+                                <p>28 July 2025</p>
                             </div>
                             <div>
                                 <button class="btn bg-blue-500 text-white hover:bg-blue-400">Completed</button>
@@ -102,7 +102,7 @@
                         <div class="flex justify-between items-center border-t border-black mt-5 pt-5">
                             <div class="">
                                 <h1>Deadline</h1>
-                                <p>21 March 2025</p>
+                                <p>14 June 2025</p>
                             </div>
                             <div>
                                 <button class="btn bg-blue-500 text-white hover:bg-blue-400">Completed</button>
@@ -116,7 +116,7 @@
                         <div class="flex justify-between items-center border-t border-black mt-5 pt-5">
                             <div class="">
                                 <h1>Deadline</h1>
-                                <p>21 March 2025</p>
+                                <p>26 March 2025</p>
                             </div>
                             <div>
                                 <button class="btn bg-blue-500 text-white hover:bg-blue-400">Completed</button>
@@ -130,7 +130,7 @@
                         <div class="flex justify-between items-center border-t border-black mt-5 pt-5">
                             <div class="">
                                 <h1>Deadline</h1>
-                                <p>21 March 2025</p>
+                                <p>5 April 2025</p>
                             </div>
                             <div>
                                 <button class="btn bg-blue-500 text-white hover:bg-blue-400">Completed</button>
@@ -144,7 +144,7 @@
                         <div class="flex justify-between items-center border-t border-black mt-5 pt-5">
                             <div class="">
                                 <h1>Deadline</h1>
-                                <p>21 March 2025</p>
+                                <p>1 May 2025</p>
                             </div>
                             <div>
                                 <button class="btn bg-blue-500 text-white hover:bg-blue-400">Completed</button>
